test2/k8s/minimal-ingress/istio-micro-ingress/istio-microingress-ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: istio-micro-ingress-nodeport
spec:
  #type: LoadBalancer
  #loadBalancerIP: 100.115.222.203
  type: NodePort
  selector:
    istio: micro-ingress
  ports:
    - name: http
      port: 80
      nodePort: 31080
    - name: https
      port: 443
      nodePort: 31443

---
apiVersion: v1
kind: Service
metadata:
  name: istio-micro-ingress
spec:
  type: LoadBalancer
  selector:
    istio: micro-ingress
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
      nodePort: 32443

---

# Source: istio/charts/ingress/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: istio-ingress
  labels:
    app: ingressgateway
    chart: ingress
    heritage: Tiller
    release: istio
    istio: micro-ingress
spec:
  template:
    metadata:
      labels:
        app: ingressgateway
        chart: ingress
        heritage: Tiller
        release: istio
        istio: micro-ingress
      annotations:
        sidecar.istio.io/inject: "false"
        scheduler.alpha.kubernetes.io/critical-pod: ""
    spec:
      containers:
        - name: ingress
          image: "gcr.io/istio-release/proxyv2:release-1.1-latest-daily"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 15090
              protocol: TCP
              name: http-envoy-prom
          args:
          - proxy
          - ingress
          - --domain
          - $(POD_NAMESPACE).svc.cluster.local
          - --log_output_level
          - 'info'
          - --drainDuration
          - '45s' #drainDuration
          - --parentShutdownDuration
          - '1m0s' #parentShutdownDuration
          - --connectTimeout
          - '10s' #connectTimeout
          - --serviceCluster
          - istio-ingress
          - --proxyAdminPort
          - "15000"
          - --controlPlaneAuthPolicy
          - NONE
          - --discoveryAddress
          - istio-pilot:15010
          resources:
            requests:
              cpu: 10m
          volumeMounts:
          - name: istio-certs
            mountPath: /etc/certs
            readOnly: true
          - name: ingress-certs
            mountPath: /etc/istio/ingress-certs
            readOnly: true
          - mountPath: /etc/istio/ingressgateway-httpbin-certs
            name: ingressgateway-httpbin-certs
            readOnly: true
          - mountPath: /etc/istio/ingressgateway-hello-certs
            name: ingressgateway-hello-certs
            readOnly: true
      volumes:
      - name: istio-certs
        secret:
          secretName: istio.default
          optional: true
      - name: ingress-certs
        secret:
          secretName: istio-ingress-certs
          optional: true
      - name: ingressgateway-httpbin-certs
        secret:
          secretName: istio-ingressgateway-certs-httpbin
          optional: true
      - name: ingressgateway-hello-certs
        secret:
          secretName: istio-ingressgateway-certs-hello
          optional: true
      affinity:      
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
                - ppc64le
                - s390x
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 2
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
          - weight: 2
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - ppc64le
          - weight: 2
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - s390x
