test2/k8s/minimal-ingress/istio-micro-ingress/istio-microingress-pilot.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
spec:
  egress:
    - hosts:
        - "./*"

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "default"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: DISABLE

---

apiVersion: v1
kind: Service
metadata:
  name: istio-pilot
  labels:
    app: istio-pilot
    release: istio
spec:
  ports:
    - port: 15010
      name: grpc-xds # direct
    - port: 15011
      name: https-xds # mTLS
    - port: 8080
      name: http-legacy-discovery # direct
    - port: 15014
      name: http-monitoring
  selector:
    istio: pilot

---
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: istio-pilot
  labels:
    app: istio-pilot
    release: istio
    istio: pilot
spec:
  replicas: 1
  template:
    metadata:
      labels:
        istio: pilot
        app: pilot
      annotations:
        sidecar.istio.io/inject: "false"
        scheduler.alpha.kubernetes.io/critical-pod: ""
    spec:
      serviceAccountName: istio-pilot-service-account
      containers:
        - name: discovery
          image: costinm/pilot:release-1.1-latest-daily
          imagePullPolicy: Always
          args:
            - "discovery"
            - --monitoringAddr=:15014
            - --domain
            - cluster.local
            - --secureGrpcAddr
            - ""
          ports:
            - containerPort: 8080
            - containerPort: 15010
            - containerPort: 15011
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 500m
              memory: 2048Mi
          volumeMounts:
            - name: config-volume
              mountPath: /etc/istio/config
            - name: istio-certs
              mountPath: /etc/certs
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: istio
        - name: istio-certs
          secret:
            secretName: istio.istio-pilot-service-account
            optional: true
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - ppc64le
                      - s390x
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 2
              preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
            - weight: 2
              preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - ppc64le
            - weight: 2
              preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - s390x
      imagePullSecrets:
        - name: private-registry-creds


---
